# llm-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
notebooks/: 00_NF4_data_type.ipynb  00_chapter01.ipynb  01_chapter02.ipynb  01_qlora_NF4.ipynb  02_BPE_karpathy.ipynb  02_chapter03.ipynb
notebooks/lora_saga/: 01_qlora_NF4.ipynb  02_dora.ipynb  03_SVD_based_SVF.ipynb  04_SVD_based_SVFT.ipynb  README.md
scripts/: download_the_verdict.py
