[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "huggingface-hub>=0.29.3",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchmetrics>=1.6.2",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pyright>=1.1.396",
    "ruff>=0.9.10",
]
